Closed
Bug 1466101
Opened 4 years ago
Closed 4 years ago
Bustages @InputStreamLengthHelper.cpp when Gecko 62 merges to Beta on 14-06-2018
Categories
(Core :: Networking, defect, P2)
Core
Networking
Tracking
()
VERIFIED
FIXED
mozilla62
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox60 | --- | unaffected |
firefox61 | --- | fixed |
firefox62 | + | verified |
People
(Reporter: CosminS, Assigned: baku)
References
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file, 1 obsolete file)
1.24 KB,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
Central as beta simulaton: https://treeherder.mozilla.org/#/jobs?repo=try&revision=dd55f89162309943b1a42701144c12b20bde4679&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=runnable&selectedJob=181317589 Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=181317589&repo=try&lineNumber=10027 [task 2018-06-01T11:12:31.738Z] 11:12:31 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/xpcom/io/Unified_cpp_xpcom_io0.cpp:20: [task 2018-06-01T11:12:31.738Z] 11:12:31 INFO - /builds/worker/workspace/build/src/xpcom/io/InputStreamLengthHelper.cpp:160:7: error: Unused "kungFuDeathGrip" 'nsCOMPtr<nsIAsyncInputStream>' objects constructed from temporary values are prohibited [task 2018-06-01T11:12:31.738Z] 11:12:31 INFO - nsCOMPtr<nsIAsyncInputStream> asyncStream = do_QueryInterface(aStream); [task 2018-06-01T11:12:31.738Z] 11:12:31 INFO - ^ [task 2018-06-01T11:12:31.739Z] 11:12:31 INFO - /builds/worker/workspace/build/src/xpcom/io/InputStreamLengthHelper.cpp:160:51: note: Please switch all accesses to this value to go through 'asyncStream', or explicitly pass 'asyncStream' to `mozilla::Unused` [task 2018-06-01T11:12:31.741Z] 11:12:31 INFO - nsCOMPtr<nsIAsyncInputStream> asyncStream = do_QueryInterface(aStream); [task 2018-06-01T11:12:31.741Z] 11:12:31 INFO - ^ [task 2018-06-01T11:12:31.741Z] 11:12:31 INFO - 1 error generated. [task 2018-06-01T11:12:31.741Z] 11:12:31 INFO - /builds/worker/workspace/build/src/config/rules.mk:1031: recipe for target 'Unified_cpp_xpcom_io0.o' failed [task 2018-06-01T11:12:31.742Z] 11:12:31 INFO - make[4]: *** [Unified_cpp_xpcom_io0.o] Error 1 [task 2018-06-01T11:12:31.743Z] 11:12:31 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/xpcom/io' [task 2018-06-01T11:12:31.743Z] 11:12:31 INFO - /builds/worker/workspace/build/src/config/recurse.mk:73: recipe for target 'xpcom/io/target' failed [task 2018-06-01T11:12:31.744Z] 11:12:31 INFO - make[3]: *** [xpcom/io/target] Error 2 [task 2018-06-01T11:12:31.744Z] 11:12:31 INFO - make[3]: *** Waiting for unfinished jobs.... This is a regression from https://bugzilla.mozilla.org/show_bug.cgi?id=1464090
Reporter | ||
Comment 1•4 years ago
|
||
This happens on Win, OSX and Linux x64 all opt. Both on Early as on Late beta.
Flags: needinfo?(amarchesini)
![]() |
||
Updated•4 years ago
|
Blocks: 1464090
status-firefox60:
--- → unaffected
status-firefox61:
--- → unaffected
status-firefox62:
--- → affected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
tracking-firefox62:
--- → ?
Assignee | ||
Comment 2•4 years ago
|
||
Flags: needinfo?(amarchesini)
Attachment #8982503 -
Flags: review?(honzab.moz)
Updated•4 years ago
|
![]() |
||
Comment 3•4 years ago
|
||
Comment on attachment 8982503 [details] [diff] [review] crash.patch Review of attachment 8982503 [details] [diff] [review]: ----------------------------------------------------------------- ::: xpcom/io/InputStreamLengthHelper.cpp @@ -157,5 @@ > if (!streamLength && !asyncStreamLength) { > // We cannot calculate the length of an async stream. We must fix the > // caller if this happens. > nsCOMPtr<nsIAsyncInputStream> asyncStream = do_QueryInterface(aStream); > - MOZ_DIAGNOSTIC_ASSERT(!asyncStream); and what about: #ifdef DEBUG nsCOMPtr<nsIAsyncInputStream> asyncStream = do_QueryInterface(aStream); MOZ_DIAGNOSTIC_ASSERT(!asyncStream); #endif ? MOZ_CRASH crashes on the Release channel too!
Attachment #8982503 -
Flags: review?(honzab.moz) → review-
Updated•4 years ago
|
Priority: -- → P2
Whiteboard: [necko-triaged]
Assignee | ||
Comment 4•4 years ago
|
||
Attachment #8982503 -
Attachment is obsolete: true
Attachment #8983338 -
Flags: review?(honzab.moz)
![]() |
||
Updated•4 years ago
|
Attachment #8983338 -
Flags: review?(honzab.moz) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/633a10eff02a Fix a debug-only variable use in InputStreamLengthHelper, r=mayhemer
Comment 6•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/633a10eff02a
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•