Bug 1466101 - Fix a debug-only variable use in InputStreamLengthHelper, r=mayhemer